templates layout completed

--- a/reveriezone/static/css/style.css
+++ b/reveriezone/static/css/style.css
@@ -399,7 +399,7 @@ th:last-child{
 /* Account page */
 .account-page{
     padding: 50px 0;
-    background: radial-gradient(#fff, #ffd6d6);
+    background: radial-gradient(#fff, #767676);
 }
 .form-container{
     background: #fff;
