--- a/reveriezone/templates/blanklayout.html
+++ b/reveriezone/templates/blanklayout.html
@@ -14,27 +14,11 @@
 </head>
 
 <body>
-
     <div class="header">
         <div class="container">
-            <div class="navbar">
-                <div class="logo">
-                    <a class="reverielogo" href="index.html"><img src="{% static 'images/reverie.png' %}" alt="logo" width="125px"></a>
-                </div>
-                <nav>
-                    <ul id="MenuItems">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="{% url 'list_product' %}">Products</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="account.html">Account</a></li>
-                    </ul>
-                </nav>
-                <a href="cart.html"><img src="{% static 'images/cart.png' %}" width="30px" height="30px"></a>
-                <img src="{% static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
-            </div>
+    {% include "menu.html" %}
             {% block header %}
-
+                
             {% endblock header %}
         </div>
     </div>
@@ -83,7 +67,7 @@
                 </div>
             </div>
             <hr>
-            <p class="copyright">Copyright 2020 - Samwit Adhikary</p>
+            <p class="copyright">Copyright 2024 - </p>
         </div>
     </div>
 
