prioritizing,detailing product,home page item displayed

--- a/reveriezone/templates/menu.html
+++ b/reveriezone/templates/menu.html
@@ -2,7 +2,7 @@
 
 <div class="navbar">
     <div class="logo">
-        <a class="reverielogo" href="index.html"><img src="{% static 'images/reverie.png' %}" alt="logo" width="125px"></a>
+        <a class="reverielogo" href="{% url 'index' %}"><img src="{% static 'images/reverie.png' %}" alt="logo" width="125px"></a>
     </div>
     <nav>
         <ul id="MenuItems">
