--- a/reveriezone/templates/product_description.html
+++ b/reveriezone/templates/product_description.html
@@ -3,44 +3,33 @@
     <div class="row">
         <div class="col-2">
             <!-- Main product image -->
-            <img src="{% static 'images/gallery-1.jpg' %}" width="100%" id="ProductImg">
+            <img src="{{product.image.url}}" width="100%" id="ProductImg">
 
             <!-- Small image thumbnails -->
-            <div class="small-img-row">
-                <div class="small-img-col">
-                    <img src="{% static 'images/gallery-1.jpg' %}" width="100%" class="small-img" data-index="0">
-                </div>
-                <div class="small-img-col">
-                    <img src="{% static 'images/gallery-2.jpg' %}" width="100%" class="small-img" data-index="1">
-                </div>
-                <div class="small-img-col">
-                    <img src="{% static 'images/gallery-3.jpg' %}" width="100%" class="small-img" data-index="2">
-                </div>
-                <div class="small-img-col">
-                    <img src="{% static 'images/gallery-4.jpg' %}" width="100%" class="small-img" data-index="3">
-                </div>
-            </div>
+
         </div>
 
         <div class="col-2">
-            <p>Home / T-Shirt</p>
-            <h1>Red Printed T-Shirt by HRX</h1>
-            <h4>$50.00</h4>
-            <select>
-                <option>Select Size</option>
-                <option>XXL</option>
-                <option>XL</option>
-                <option>L</option>
-                <option>M</option>
-                <option>S</option>
-            </select>
+            <p>{{product.title}}</p>
+            <h1>{{product.title}}</h1>
+            <h4>{{product.price}}</h4>
             <input type="number" value="1">
             <a href="#" class="btn">Add To Cart</a>
+            <a href="" class="btn">BUY NOW</a>
 
             <h3>Product Details <i class="fa fa-indent"></i></h3>
             <br>
-            <p>Give your summer wardrobe a style upgrade with the HRX Men's Active T-Shirt. Team it with a pair of
-                shorts for your morning workout or denims for an evening out with the guys.</p>
+            {% if product.description %}
+                <div id="productDescription">
+                    <div class="description-content" id="descriptionContent">
+                        <p id="truncatedDescription">{{ product.description|slice:":200" }}</p>
+                        <p id="fullDescription" style="display: none;">{{ product.description }}</p>
+                    </div>
+                    {% if product.description|length > 200 %}
+                        <a href="#" id="viewMoreLink" onclick="toggleDescription(event)"><strong>View More</strong></a>
+                    {% endif %}
+                </div>
+            {% endif %}
         </div>
     </div>
 </div>
@@ -70,4 +59,29 @@
             });
         });
     });
+
+
+</script>
+
+
+
+<script>
+    function toggleDescription(event) {
+        event.preventDefault();
+        const truncatedDesc = document.getElementById('truncatedDescription');
+        const fullDesc = document.getElementById('fullDescription');
+        const viewMoreLink = document.getElementById('viewMoreLink');
+
+        if (truncatedDesc.style.display === 'none') {
+            // Description is currently expanded, collapse it
+            truncatedDesc.style.display = 'block';
+            fullDesc.style.display = 'none';
+            viewMoreLink.innerHTML = '<strong>View More</strong>';
+        } else {
+            // Description is currently truncated, expand it
+            truncatedDesc.style.display = 'none';
+            fullDesc.style.display = 'block';
+            viewMoreLink.innerHTML = '<strong>View Less</strong>';
+        }
+    }
 </script>
