--- a/reveriezone/templates/account.html
+++ b/reveriezone/templates/account.html
@@ -12,6 +12,15 @@
                 </div>
                 <div class="col-2">
                     <div class="form-container">
+                        {% if messages %}
+                        <div style="height: 40px;width:300px;margin-bottom:15px;">
+                            <ul>
+                                {% for message in messages %}
+                                <li class="{{ message.tags }}" style="color: red;font-size:13px;font-weight:bold;">{{message}}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        {% endif %}
                         <div class="form-btn">
                             <span onclick="login()">Login</span>
                             <span onclick="register()">Register</span>
@@ -21,7 +30,7 @@
                             {% csrf_token %}
                             <input type="text" required name="username" placeholder="Username">
                             <input type="password" required name="password" placeholder="Password">
-                            <button type="submit" class="btn">Login</button>
+                            <button type="submit" name="login" class="btn">Login</button>
                             <a href="">Forget Password</a>
                         </form>
 
