--- a/reveriezone/templates/menu.html
+++ b/reveriezone/templates/menu.html
@@ -9,10 +9,16 @@
             <li><a href="{% url 'index' %}">Home</a></li>
             <li><a href="{% url 'list_product' %}">Products</a></li>
             <li><a href="{% url 'list_product' %}">About</a></li>
-            <li><a href="{% url 'list_product' %}">Contact</a></li>
+            {% if not user.is_authenticated %}
             <li><a href="{% url 'show_account' %}">Account</a></li>
+            {% else %}
+            <li><a href="{% url 'logout_user' %}">logout</a></li>
+            {% endif %}
+
         </ul>
     </nav>
+    {% if user.is_authenticated %}
     <a href="{% url 'show_cart' %}"><img src="{% static 'images/cart.png' %}" width="30px" height="30px"></a>
+    {% endif %}
     <img src="{% static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
 </div>
